[gd_scene load_steps=8 format=3 uid="uid://cx88hepsjgmof"]

[ext_resource type="Script" path="res://scripts/startScreen.gd" id="1_c3iqv"]
[ext_resource type="Texture2D" uid="uid://bsx88hmgqwlgm" path="res://assets/Story Graphics/startScreen.png" id="1_v3pkv"]
[ext_resource type="Texture2D" uid="uid://du3n1y1jq0wm2" path="res://assets/UI Graphics/menuBackground.png" id="3_la5qa"]
[ext_resource type="FontFile" uid="uid://dg0bdmkfq8uqx" path="res://assets/Dangrek-Regular.ttf" id="4_v6hi1"]
[ext_resource type="Texture2D" uid="uid://clw205s8vvpdp" path="res://assets/UI Graphics/button.png" id="5_srmw7"]
[ext_resource type="Texture2D" uid="uid://5sx7iuauerfi" path="res://assets/Story Graphics/storyIntro1.PNG" id="6_fd6l4"]
[ext_resource type="Texture2D" uid="uid://cfcpips1rlqsa" path="res://assets/Story Graphics/storyIntro9.PNG" id="7_1v7em"]

[node name="startScreen" type="Node2D"]
script = ExtResource("1_c3iqv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="StartScreen" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(960, 540)
texture = ExtResource("1_v3pkv")
metadata/_edit_lock_ = true

[node name="MenuBackground" type="Sprite2D" parent="CanvasLayer"]
z_index = 2
position = Vector2(430.25, 825)
scale = Vector2(0.7695, 0.446)
texture = ExtResource("3_la5qa")
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="CanvasLayer"]
z_index = 2
offset_left = 88.0
offset_top = 646.0
offset_right = 776.0
offset_bottom = 772.0
theme_override_colors/font_hover_color = Color(0.945098, 0.87451, 0.631373, 1)
theme_override_colors/font_color = Color(0.694118, 0.552941, 0.0980392, 1)
theme_override_fonts/font = ExtResource("4_v6hi1")
theme_override_font_sizes/font_size = 60
text = "NEW GAME"
icon = ExtResource("5_srmw7")
flat = true
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_fd6l4")

[node name="DecisionScreen" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(962, 541)
texture = ExtResource("7_1v7em")

[node name="ButtonYes" type="Button" parent="DecisionScreen"]
z_index = 2
offset_left = -356.0
offset_top = 179.0
offset_right = 332.0
offset_bottom = 305.0
theme_override_colors/font_hover_color = Color(0.945098, 0.87451, 0.631373, 1)
theme_override_colors/font_color = Color(0.694118, 0.552941, 0.0980392, 1)
theme_override_fonts/font = ExtResource("4_v6hi1")
theme_override_font_sizes/font_size = 60
text = "YES"
icon = ExtResource("5_srmw7")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ButtonNo" type="Button" parent="DecisionScreen"]
z_index = 2
offset_left = -355.0
offset_top = 307.0
offset_right = 333.0
offset_bottom = 433.0
theme_override_colors/font_hover_color = Color(0.945098, 0.87451, 0.631373, 1)
theme_override_colors/font_color = Color(0.694118, 0.552941, 0.0980392, 1)
theme_override_fonts/font = ExtResource("4_v6hi1")
theme_override_font_sizes/font_size = 60
text = "NO
"
icon = ExtResource("5_srmw7")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="DecisionScreen/ButtonYes" to="." method="_on_button_yes_pressed"]
[connection signal="pressed" from="DecisionScreen/ButtonNo" to="." method="_on_button_no_pressed"]
